--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,9 @@ body{
 	align-items: center;
 	z-index: 100;
 	transition: 0.4s;
-  box-shadow: 0px 0px 2px solid black;
+    background-color: var(--bg-clr-one);
+   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.15);
+
 }
 .home.active .navbar{
 	top: 0;
@@ -101,7 +103,7 @@ body{
 	max-height: 70px;
 	height: 10vh;
 	background-color: var(--bg-clr-one);
-	box-shadow: 0px 0px 2px solid rgba(0,0,0,0.15);
+	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.15);
 }
 
 .navbar .logo b{
@@ -406,6 +408,7 @@ color: #e3e3e8;
 	background-color: var(--primary-clr);
 	font-size: 30px;
 	width: 55px;
+	color: white;
 	height: 55px;
 	border-radius: 50%;
 	display: flex;
