--- a/src/App.css
+++ b/src/App.css
@@ -915,7 +915,16 @@ color: #e3e3e8;
 	justify-content: space-between;
 	text-align-last: center;
 	
-
+   
+}
+.footer-email{
+	width: 60%;
+	padding: 10px 0px 2px 0px;
+}
+.footer-buttond{
+	border-radius: 3px;
+	width: 40%;
+	padding: 9px 0px 2px 0px;
 }
 .vinct p{
 margin-top: 10px;
