--- a/src/Dashboard/Dashstyles/Sidebar.css
+++ b/src/Dashboard/Dashstyles/Sidebar.css
@@ -1,4 +1,25 @@
-.sidebar li a{
+
+
+.sidebar{
+    background-color: aliceblue;
+    padding: 1rem 2rem 0rem 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    min-height: 100vh;
+}
+.sidebar-1 {
+    display: grid;
+    gap: 30px;
+}
+.sidebar-1 li a{
+    color: cadetblue;
     list-style: none;
     text-decoration: none;
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
+.sidebarimage{
+    width: 50px;
+    min-height: 20px;
+    border-radius: 10px;
 }
