--- a/src/Dashboard/Dashstyles/Dashnavbar.css
+++ b/src/Dashboard/Dashstyles/Dashnavbar.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     width: 193.7vh;
     padding: 1rem;
+    box-shadow: 0px 0px 1px;
 }
 .navbar p{
     font-size: 13px;
