--- a/src/Dashboard/Dashstyles/Users.css
+++ b/src/Dashboard/Dashstyles/Users.css
@@ -1,22 +1,18 @@
-.placetable td{
-  padding: 21px 50px 21px 50px;
-  
-  font-size: 13px;
+.tableuser{
+  width: 100%;
+  /* background-color: brown; */
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
-.placetable tr:nth-child(odd) {
-    background-color: rgb(246, 246, 246);
-    border: none;
-  }
-  .placetable tr:nth-child(even) {
-    background-color: aliceblue;
-    border: none;
-    border-color: white;
-  }
-  .tableuser{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .placetable th{
-    line-height: 0px;
-  }
+.placetable{
+  width: 0%;
+}
+.placetable td{
+padding: 20px 0px 20px 0px;
+}
+/* .tableuser{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+} */
