--- a/src/Dashboard/Dashstyles/Dashnavbar.css
+++ b/src/Dashboard/Dashstyles/Dashnavbar.css
@@ -1,10 +1,16 @@
+*{
+    padding: 0px;
+    margin: 0px;
+}
+
 .navbar{
     display: flex;
-    background-color: aliceblue;
+    background-color:aliceblue;
     justify-content: space-between;
-    width: 193.7vh;
+    width: 196.1vh;
     padding: 1rem;
     box-shadow: 0px 0px 1px;
+    /* border-bottom: 2px; */
 }
 .navbar p{
     font-size: 13px;
