--- a/src/Dashboard/Dashstyles/Dashnavbar.css
+++ b/src/Dashboard/Dashstyles/Dashnavbar.css
@@ -7,7 +7,7 @@
     display: flex;
     background-color:aliceblue;
     justify-content: space-between;
-    width: 196.1vh;
+    width: 100%;
     padding: 1rem;
     box-shadow: 0px 0px 1px;
     /* border-bottom: 2px; */
