--- a/src/Dashboard/Dashstyles/Users.css
+++ b/src/Dashboard/Dashstyles/Users.css
@@ -5,14 +5,22 @@
    flex-direction: column;
    align-items: center;
 }
-.placetable{
-  width: 0%;
-}
+
 .placetable td{
-padding: 20px 0px 20px 0px;
+  padding: 21px 50px 21px 50px;
+  
+  font-size: 13px;
 }
-/* .tableuser{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-} */
+.placetable thead{
+  color:rgb(13, 204, 140);
+  font-size: 16px;
+}
+.placetable tr:nth-child(odd) {
+    background-color: rgb(246, 246, 246);
+    border: none;
+  }
+  .placetable tr:nth-child(even) {
+    background-color: aliceblue;
+    border: none;
+    border-color: white;
+  }
