--- a/src/Dashboard/Dashstyles/Dashhome.css
+++ b/src/Dashboard/Dashstyles/Dashhome.css
@@ -1,8 +1,35 @@
-.datalength{
-    width: 100px;
-    height: 100px;
-    box-shadow: 0px 2px 2px;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
+.campscard {
+  display: flex;
+  gap: 20px;
+}
+.usercard {
+  width: 14.5rem;
+  height: 8rem;
+  border-radius: 12px;
+  background-color: rgb(180,223,196);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.iconn {
+  font-size: 2rem;
+  margin-top: 1.5rem;
+}
+.chartsdash {
+  display: flex;
+  gap: 30px;
+}
+.camps {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  padding-top: 3rem;
+  align-items: center;
+}
+.chart1 {
+  /* width={370} */
+  width: 10rem;
+  height: 10rem;
+  /* height={200} */
+  margin: 2rem 2;
 }
