--- a/src/Dashboard/Dashstyles/Dashnavbar.css
+++ b/src/Dashboard/Dashstyles/Dashnavbar.css
@@ -5,11 +5,11 @@
 
 .navbar{
     display: flex;
-    background-color:aliceblue;
+    background-color:white;
     justify-content: space-between;
     width: 100%;
     padding: 1rem;
-    box-shadow: 0px 0px 1px;
+    box-shadow: 0px 1px 1px;
     /* border-bottom: 2px; */
 }
 .navbar p{
