--- a/src/Dashboard/Dashstyles/Dashhome.css
+++ b/src/Dashboard/Dashstyles/Dashhome.css
@@ -90,3 +90,30 @@
   /* height={200} */
   margin: 2rem 2;
 }
+@media (max-width:768px) {
+  .campscard {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 20px;
+}
+.chartsdash {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+  
+}
+@media (max-width:480px) {
+    .campscard {
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  gap: 20px;
+}
+.chartsdash {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+/* .areacharts{
+} */
+}
