--- a/src/Dashboard/Dashstyles/Users.css
+++ b/src/Dashboard/Dashstyles/Users.css
@@ -36,3 +36,18 @@
    flex-direction: column;
    align-items: center;
 }
+@media (max-width:768px) {
+  .placetable td{
+  padding: 21px 20px 21px 20px;
+  
+  font-size: 13px;
+}
+}
+@media (max-width:480px) {
+  .placetable td{
+  padding: 10px 15px 10px 15px;
+  
+  font-size: 10px;
+}
+
+}
